--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <div class="container-fluid">
 
-        <h1 id="level-title">Press any key to start.</h1>
+        <h1 id="level-title">Press or Tap to start.</h1>
 
         <div class="row align-items-center justify-content-center">
             <button id="green" class="col-xl-6 col-lg-6 col-md-6 col-sm-6 btn green"></button>
